--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "files.associations": {
     "string.h": "c",
     "kernel.h": "c",
-    "fs.h": "c"
+    "fs.h": "c",
+    "stat.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
